--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <html>
     <head>
         <title>Marcação pre.</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #f0f0f0;
+                color: #333;
+                padding: 20px;
+            }
+            h1 {
+                color: #007bff;
+                text-align: center;
+                margin-bottom: 20px;
+            }
+            pre {
+                background-color: #f9f9f9;
+                padding: 10px;
+                border-radius: 5px;
+                overflow-x: auto;
+            }
+        </style>
     </head>
     <body bgcolor="#FF0000">
         <p><font color="#FF0000">Aula 3</font></p>
