--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             }
         </style>
     </head>
-    <body bgcolor="#FF0000">
-        <p><font color="#FF0000">Aula 3</font></p>
-        <h2><font color="#FFFF00">Marcação pre</font></h2>
+    <body>
+        <p><span style="color: red">Aula 3</span</p>
+        <h2><span style="color: rgb(110, 0, 0)">>Marcação pre</span></h2>
         <p>Delimita uma área de texto em que espaços, tabulações e novas linhas são mantidas.</p>
         <p>seja, o texto será apresentado exatamente da forma como foi digitado, mesmo que</p>
         <p>não hajam marcadores do html. É uma forma de se preservar o formato de um texto.</p>
